--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.83.0",
     "cookie": "^1.0.2",
+    "cors": "^2.8.5",
     "firebase": "^12.1.0",
     "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
